--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garage 333 - Детейлинг</title>
+    <!-- Добавьте эти строки после <title> -->
+    <meta name="description" content="Детейлинг Garage 333 в Армавире: химчистка, полировка, антикоррозийная обработка, шумоизоляция автомобиля. Профессиональный уход за вашим авто. Запись по телефону +7 (918) 083-99-89">
+    <meta name="keywords" content="детейлинг Армавир, химчистка авто Армавир, полировка автомобиля, антикоррозийная обработка, шумоизоляция машины, детейлинг студия, Garage 333">
     <link rel="stylesheet" href="style.css">
          <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
